--- a/QuizShow/quizShow.css
+++ b/QuizShow/quizShow.css
@@ -1,86 +1,85 @@
-/* some colors you may find useful:
-  #115ff4 -blue
-  #060ce9 -dark blue
-  #28a200 -green
-  #8d2ab5 -purple
-  #74119c -dark purple
-*/
-
 
 body {
-  text-align: center;
   background-color: #115ff4;
+}
+
+header {
   color: white;
+  text-align: center;
 }
 
-h1 {
-  font-weight: bold;
-  font-size: 40px;
-  margin-top: 2%;
-  margin-bottom: 5px;
+header > h1 {
+  font-size: 3em;
+  margin-bottom: 0;
 }
 
-button {
-  width:  120px;
-  height: 32px;
-  background-color: #8d2ab5;
+#jeopardy {
+  text-align: center;
+  font-size: 9pt;
+  background-color: #060ce9;
   color: white;
-  outline: none;
-  border: none;
-  border-radius: 5px;
+  border-collapse: collapse;
+  margin: 0 auto;
 }
 
-button:hover {
-  background-color: #74119c;
+#jeopardy th, #jeopardy td {
+  border: solid 1px white;
+  width: 10em;
+  padding: 0.5em;
+}
+
+#jeopardy td.disabled {
+  background-color: #28a200
 }
 
 th {
-  width: 200px;
-  min-height: 50px;
-  padding: 10px;
-  background-color: #060ce9;
-  border: 2px solid gray;
+  text-transform: uppercase;
+  font-family: Helvetica, sans-serif;
+  font-weight: bold;
+  height: 4em;
+  text-shadow: darkgoldenrod 1px 1px;
 }
 
 td {
-  background-color: #060ce9;
-  width: 200px;
-  height: 100px;
-  border: 2px solid gray;
+  height: 7em;
+  font-family: Copse, serif;
 }
 
-td:hover {
+button, td {
   cursor: pointer;
 }
 
-table {
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  border-collapse: collapse;
+.fa-question-circle {
+  pointer-events: none;
 }
 
-.fa-spinner {
-  margin-top: 3%;
+#start {
+  background-color: #8d2ab5;
+  padding: 1em 3em;
+  border: none;
+  border-radius: 0.5em;
+  color: white;
+  font-size: 1em;
+  margin: 0.5em 0;
 }
 
-.question {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
- .loading {
-  cursor: not-allowed;
+#start:hover,
+#start.disabled {
   background-color: #74119c;
 }
 
-td.answer {
+.disabled {
   cursor: not-allowed;
 }
 
-.fa-question {
-  color: black !important;
+#spin-container {
+  font-size: 12em;
+  text-align: center;
+  color: white;
+  margin: 25px;
+  display: none;
 }
+
 
 /* This makes sure when you click on a question it ignores sub elements like icons
   src: https://css-tricks.com/slightly-careful-sub-elements-clickable-things/
